--- a/style.css
+++ b/style.css
@@ -1,7 +1,5 @@
-.attribution { font-size: 11px; text-align: center; }
-.attribution a { color: hsl(228, 45%, 44%); }
 * {
-    font-family: 'Quicksand', sans-serif;
+    font-family: 'Kumbh Sans', sans-serif;
     margin: 0;
     padding: 0;
 }
@@ -24,38 +22,15 @@ body{
    
 }
 
-.top-pattern{
-    position: absolute;
-    top: 0;
-    left: -10vw;
-
-    transform: translate(-50% -50%);
-    /* width: 60vw; */
-    
-    
-    /* transform: translate(-50% -50%); */
-}
-.bottom-pattern{
-    position: absolute;
-    bottom: -50%;
-    right: -15%;
-    transform: translate(50% 50%);
-   
-    
-    
-}
-
 #card{
     display: flex;
     flex-direction: column;
     width: 93vw;
     max-width: 420px;
     height: 420px;
-    
     border-radius: 18px;
     position: absolute;
     background-color: white;
-
     box-shadow: 0px 0px 3px 1px rgba(28, 28, 28, 0.26);
 }
 
@@ -74,29 +49,35 @@ body{
     position: relative;
    flex-direction: column;
    align-items: center;
-    
-    /* height: 130px; */
     flex-grow: 1;
-    /* border: solid 1px red; */
     border-radius: 18px 18px 0 0 ;
+    /* border: solid 1px red; */
 }
 
 #bottom-section{
    display: flex;
    flex-direction: column;
-   /* border: solid 1px blue; */
    align-items: center;
-   justify-content: start;
-
-
+   justify-content: center;
    height: 55%;
+   /* border: solid 1px blue; */
    
+}
+
+.info{
+    align-items: center;
+    margin-top: 45px;
+    /* border: dashed 1px green; */
+}
+.info *{
+    margin: 7px 4px;
+    /* display: flex;border: dashed 1px green; */
 }
 
 .name{
     display: inline-block;
     font-weight: 700;
-    font-size: 19px;
+    font-size: 18px;
     color: #3a3939;
     text-shadow: 0px 0px 2px #545353;
 }
@@ -104,7 +85,7 @@ body{
     display: inline-block;
     color: #8c8c8c;
     font-weight: 400;
-    font-size: 19px;
+    font-size: 18px;
     text-shadow: 0px 0px 2px #7b7a7a;
 }
 .location{
@@ -112,29 +93,19 @@ body{
     color: #858383;
     font-weight: 400;
     text-shadow: 0px 0px 1px #434343;
+    text-align: center;
+    width: 100%;
     /* border: dashed 1px green; */
 }
 .portrait{
     position: absolute;
     bottom: -50px;
     border-radius: 50%;
-    border: solid 8px white;
-    width: 100px;
+    border: solid 6px white;
+    width: 115px;
     background-color: white;
-    
 }
-.info{
-    margin-top: 80px;
-    display: flex;
-    /* border: dashed 1px green; */
 
-   
-    
-}
-.info *{
-    margin: 7px 4px;
-    /* display: flex;border: dashed 1px green; */
-}
 
 #stats{
     display: flex;
@@ -152,15 +123,16 @@ body{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    /* border: solid 1px blue; */
     height: 65%;
     width: 80px;
     margin: 0 15px;
+    /* border: solid 1px blue; */
 }
+
 
 .stat-number{
     font-weight: 700;
-    font-size: 19px;
+    font-size: 18px;
     color: #333232;
     text-shadow: 0px 0px 2px #545353;
     margin: 5px 0;
@@ -174,7 +146,8 @@ body{
 }
 
 hr{
-    /* margin: 0px 16px; */
     border: none;
     border-top: 1px solid rgba(133, 132, 132, 0.302);
+    /* margin: 0px 16px; */
+    
 }
